--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,12 @@
 <div>
-    <link href='/style.css' rel='stylesheet'>
+    <link href='/hybrids-wiki/style.css' rel='stylesheet'>
     <h1 class="headerTitle">HYBRIDS WIKI</h1>
 </div>
 <div class="gui">
     <table>
         <tr>
-            <th><a href="/index.html">Home</a></th>
-            <th><a href="/articles/categories/characters.html">Hybirds</a></th>
+            <th><a href="/hybrids-wiki/index.html">Home</a></th>
+            <th><a href="/hybrids-wiki/articles/categories/characters.html">Hybirds</a></th>
         </tr>
     </table>
 </div>
